<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="finger_tip.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/quicksand_medium"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/record_and_track"
        android:textColor="@color/green_800"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:gravity="center"
        android:text="@string/attendance"
        android:textColor="@color/green_800"
        android:textSize="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:lineSpacingExtra="-10dp"
        android:text="@string/at_your_fingertip"
        android:textColor="@color/green_800"
        android:textSize="@dimen/_38sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <soup.neumorphism.NeumorphButton
        android:id="@+id/proceed"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:padding="@dimen/_20sdp"
        android:paddingStart="@dimen/_40sdp"
        android:paddingEnd="@dimen/_40sdp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:neumorph_backgroundColor="@color/green_800"
        app:neumorph_lightSource="leftTop"
        app:neumorph_shadowColorDark="@color/green_100"
        app:neumorph_shadowColorLight="@color/faded_white"
        app:neumorph_shadowElevation="@dimen/_5sdp"
        app:neumorph_shapeType="flat" />

</androidx.constraintlayout.widget.ConstraintLayout>