<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="com.gecb.attendy.R"/>
        <variable
            name="isVisible"
            type="boolean" />
        <variable
            name="csid"
            type="int" />
        <variable
            name="itid"
            type="int" />
        <variable
            name="ettid"
            type="int" />
        <variable
            name="eeid"
            type="int" />
        <variable
            name="minid"
            type="int" />
        <variable
            name="civilid"
            type="int" />
        <variable
            name="mechid"
            type="int" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_20sdp"
    android:background="@color/faded_white"
    android:layout_marginHorizontal="@dimen/_20sdp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/choose_your_branch_in_which_you_teach"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/faded_white"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_amount_bg"
                android:drawablePadding="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/cse"
                android:textColor="@color/brown_900"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@{csid}"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/it"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/border_amount_bg"
                android:drawablePadding="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/it"
                android:textColor="@color/brown_900"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@{itid}"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ett"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_amount_bg"
                android:drawablePadding="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/et_t"
                android:textColor="@color/brown_900"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@{ettid}"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/elec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/border_amount_bg"
                android:drawablePadding="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/electrical"
                android:textColor="@color/brown_900"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@{eeid}"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_amount_bg"
                android:drawablePadding="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/mining"
                android:textColor="@color/brown_900"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@{minid}"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/civil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/border_amount_bg"
                android:drawablePadding="10dp"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/civil"
                android:textColor="@color/brown_900"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@{civilid}"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/mech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/border_amount_bg"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/mechanical"
            android:textColor="@color/brown_900"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@{mechid}"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
            app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />


    </LinearLayout>

    <soup.neumorphism.NeumorphButton
        android:id="@+id/proceed"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:padding="@dimen/_20sdp"
        android:text="@string/proceed"
        android:textColor="@color/blue"
        android:visibility="@{isVisible?View.VISIBLE:View.GONE}"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17"
        app:neumorph_backgroundColor="@color/white"
        app:neumorph_shadowColorDark="@color/shadow_white"
        app:neumorph_shadowColorLight="@color/faded_white"
        app:neumorph_shadowElevation="@dimen/_10sdp"
        app:neumorph_shapeType="flat" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>