<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="com.gecb.attendy.R"/>
        <variable
            name="isVisible"
            type="boolean" />
        <variable
            name="oneid"
            type="int" />
        <variable
            name="twoid"
            type="int" />
        <variable
            name="threeid"
            type="int" />
        <variable
            name="fourthid"
            type="int" />
        <variable
            name="fiveid"
            type="int" />
        <variable
            name="sixid"
            type="int" />
        <variable
            name="sevenid"
            type="int" />
        <variable
            name="eightid"
            type="int" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/faded_white"
        android:layout_marginHorizontal="@dimen/_20sdp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/choose_your_semester_in_which_you_teach"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/faded_white"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_amount_bg"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/_1"
                    android:textColor="@color/brown_900"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@{oneid}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_amount_bg"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/_2"
                    android:textColor="@color/brown_900"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@{twoid}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_amount_bg"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/_3"
                    android:textColor="@color/brown_900"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@{threeid}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_amount_bg"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/_4"
                    android:textColor="@color/brown_900"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@{fourthid}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_amount_bg"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/_5"
                    android:textColor="@color/brown_900"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@{fiveid}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/six"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_amount_bg"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/_6"
                    android:textColor="@color/brown_900"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@{sixid}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/seven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_amount_bg"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/_7"
                    android:textColor="@color/brown_900"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@{sevenid}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

                <TextView
                    android:id="@+id/eight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_amount_bg"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/_8"
                    android:textColor="@color/brown_900"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@{eightid}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            </LinearLayout>
        </LinearLayout>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/proceed"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:padding="@dimen/_20sdp"
            android:text="@string/proceed"
            android:textColor="@color/blue"
            android:visibility="@{isVisible?View.VISIBLE:View.GONE}"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout17"
            app:neumorph_backgroundColor="@color/white"
            app:neumorph_shadowColorDark="@color/shadow_white"
            app:neumorph_shadowColorLight="@color/faded_white"
            app:neumorph_shadowElevation="@dimen/_10sdp"
            app:neumorph_shapeType="flat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>